# isometric

./: .gitignore  README.md  pyproject.toml
iso/: builder.py  bundler.py  cli.py  cloner.py  datasets.py  inference.py  scanner.py  validator.py
